--- a/Readme
+++ b/Readme
@@ -1,1 +1,14 @@
-Hi.
+# Newbie-coder
+#### HelloWorld! I'm a newbie-coder who wanna be the best **S/W developer** in the world!
+
+___
+
+## < Practice >
+
+algorithm 연습을 위한 레포입니다.
+C++ 와 python을 주로 사용합니다.
+
+___
+
+ * **Python** [beginning]
+ * C/C++  [beginning]
